--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
 body {
     margin: 0px;
 }
+.axis line,
+.axis text {
+  font: 11px sans-serif;
+}
+.axis path {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+div.tooltip {	
+    position: absolute;
+    text-align: center;
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
   
 circle {
     fill: #553BD8;
-    opacity: 0.3;
+    opacity: 0.5;
 }
   
 text {
