--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ text {
     fill: #635F5D;
 }
 
-.button {
+#button_pop {
     background-color: #1833A8; 
     border: none;
     color: white;
@@ -62,6 +62,32 @@ text {
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
   }
+
+#button_hist {
+    background-color: #69b3a2; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+
+#button_epi {
+    background-color: #8d15a8; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    }
   
 .button:hover {
     background-color: #0F689C; 
